--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="src" kind="src"/>
-	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
-	<classpathentry path="janino.jar" kind="lib"/>
-	<classpathentry path="classes" kind="output"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="janino.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/awtgeom"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/awtshim"/>
+	<classpathentry kind="output" path="classes"/>
 </classpath>
